update with mbert unseen

--- a/index.html
+++ b/index.html
@@ -656,9 +656,11 @@
   <div class="col-12 col-lg-8">
 
     <ul>
-<li>ELMoLex: Connecting ELMo and Lexicon features for Dependency Parsing, UDW 2018</li>
-<li>Unsupervised Learning for Handling Code-Mixed Data: A Case Study on POS Tagging of North-African Arabizi Dialect, EurNLP 2019</li>
-<li>Enhancing BERT for lexical Normalization, WNUT 2019.</li>
+<li>Can multilingual language models transfer to an unseen dialect? <a href="/files/mbert-unseen-dialect.pdf">[-]</a></li>
+<li>CamemBERT: a Tasty French Language Model, ACL 2020 <a href="https://arxiv.org/pdf/1911.03894.pdf" target="_blank">[-]</a></li>
+<li>Unsupervised Learning for Handling Code-Mixed Data: A Case Study on POS Tagging of North-African Arabizi Dialect, EurNLP 2019 <a href="https://hal.archives-ouvertes.fr/hal-02270527/document" target="_blank">[-]</a></li>
+<li>Enhancing BERT for lexical Normalization, WNUT 2019 <a href="https://www.aclweb.org/anthology/D19-5539.pdf" target="_blank">[-]</a></li>
+<li>ELMoLex: Connecting ELMo and Lexicon features for Dependency Parsing, UDW 2018 <a href="https://www.aclweb.org/anthology/K18-2023.pdf" target="_blank">[-]</a></li>
 </ul>
 
 
