--- a/index.html
+++ b/index.html
@@ -755,7 +755,11 @@
   </div>
   <div class="col-12 col-lg-8">
 
-    <p>Currently teaching at <a href="https://www.ensae.fr/courses/analyse-textuelle/" target="_blank">ENSAE</a>  and <a href="https://www.parisdescartes.fr/en/homepage/" target="_blank">University Paris-Descartes</a></p>
+    <p>2019-2020 - Instructor at Engineer School <a href="https://www.ensae.fr/courses/analyse-textuelle/" target="_blank">ENSAE Paris</a>, Teaching <a href="https://nlp-ensae.github.io/" target="_blank">Machine Learning for Natural Language Processing</a></p>
+
+<p>2018-2019 - Teaching assistant for Master students in <strong><em>Initiation to Research</em></strong> in statistics at <a href="https://www.parisdescartes.fr/en/homepage/" target="_blank">University Paris-Descartes</a></p>
+
+<p>2014-2016 - Teaching assistant for Bachelor students in <strong><em>Mathematics</em></strong>, Prépa ECS at Lycée Ipécom, Paris</p>
 
 
     
