--- a/back/experience/index.html
+++ b/back/experience/index.html
@@ -113,9 +113,9 @@
   
   <meta property="twitter:card" content="summary">
   
-  <meta property="og:site_name" content="">
+  <meta property="og:site_name" content="Home">
   <meta property="og:url" content="https://ben-mlr.github.io/back/experience/">
-  <meta property="og:title" content="Experience | ">
+  <meta property="og:title" content="Experience | Home">
   <meta property="og:description" content=""><meta property="og:image" content="https://ben-mlr.github.io/img/icon-192.png">
   <meta property="twitter:image" content="https://ben-mlr.github.io/img/icon-192.png"><meta property="og:locale" content="en-us">
   
@@ -139,7 +139,7 @@
 
 
 
-  <title>Experience | </title>
+  <title>Experience | Home</title>
 
 </head>
 
@@ -182,7 +182,7 @@
   <div class="container">
 
     
-      <a class="navbar-brand" href="/"></a>
+      <a class="navbar-brand" href="/">Home</a>
       
       <button type="button" class="navbar-toggler" data-toggle="collapse"
               data-target="#navbar" aria-controls="navbar" aria-expanded="false" aria-label="Toggle navigation">
