--- a/publication/crossgenqa/index.html
+++ b/publication/crossgenqa/index.html
@@ -113,9 +113,9 @@
   
   <meta property="twitter:card" content="summary">
   
-  <meta property="og:site_name" content="">
+  <meta property="og:site_name" content="Home">
   <meta property="og:url" content="https://ben-mlr.github.io/publication/crossgenqa/">
-  <meta property="og:title" content="Cross-Lingual GENQA: A Language-Agnostic Generative Question Answering Approach for Open-Domain Question Answering | ">
+  <meta property="og:title" content="Cross-Lingual GENQA: A Language-Agnostic Generative Question Answering Approach for Open-Domain Question Answering | Home">
   <meta property="og:description" content="Open-Retrieval Generative Question Answering (GENQA) is proven to deliver high-quality, natural-sounding answers in English. In this paper, we present the first generalization of the GENQA approach for the multilingual environment. To this end, we present the GEN-TYDIQA dataset, which extends the TyDiQA evaluation data (Clark et al., 2020) with natural-sounding, well-formed answers in Arabic, Bengali, English, Japanese, and Russian. For all these languages, we show that a GENQA sequence-to-sequence-based model outperforms a state-of-the-art Answer Sentence Selection model. We also show that a multilingually-trained model competes with, and in some cases outperforms, its monolingual counterparts. Finally, we show that our system can even compete with strong baselines, even when fed with information from a variety of languages. Essentially, our system is able to answer a question in any language of our language set using information from many languages, making it the first LanguageAgnostic GENQA system"><meta property="og:image" content="https://ben-mlr.github.io/img/icon-192.png">
   <meta property="twitter:image" content="https://ben-mlr.github.io/img/icon-192.png"><meta property="og:locale" content="en-us">
   
@@ -160,7 +160,7 @@
   
   "publisher": {
     "@type": "Organization",
-    "name": "",
+    "name": "Home",
     "logo": {
       "@type": "ImageObject",
       "url": "https://ben-mlr.github.io/img/icon-512.png"
@@ -184,7 +184,7 @@
 
 
 
-  <title>Cross-Lingual GENQA: A Language-Agnostic Generative Question Answering Approach for Open-Domain Question Answering | </title>
+  <title>Cross-Lingual GENQA: A Language-Agnostic Generative Question Answering Approach for Open-Domain Question Answering | Home</title>
 
 </head>
 
@@ -227,7 +227,7 @@
   <div class="container">
 
     
-      <a class="navbar-brand" href="/"></a>
+      <a class="navbar-brand" href="/">Home</a>
       
       <button type="button" class="navbar-toggler" data-toggle="collapse"
               data-target="#navbar" aria-controls="navbar" aria-expanded="false" aria-label="Toggle navigation">
