--- a/talks/itu/index.html
+++ b/talks/itu/index.html
@@ -113,9 +113,9 @@
   
   <meta property="twitter:card" content="summary">
   
-  <meta property="og:site_name" content="">
+  <meta property="og:site_name" content="Home">
   <meta property="og:url" content="https://ben-mlr.github.io/talks/itu/">
-  <meta property="og:title" content="ITU Copenhagen, When Being unseen by mBERT is just the beginning, Handling New Languages With Multilingual Language Models | ">
+  <meta property="og:title" content="ITU Copenhagen, When Being unseen by mBERT is just the beginning, Handling New Languages With Multilingual Language Models | Home">
   <meta property="og:description" content=""><meta property="og:image" content="https://ben-mlr.github.io/img/icon-192.png">
   <meta property="twitter:image" content="https://ben-mlr.github.io/img/icon-192.png"><meta property="og:locale" content="en-us">
   
@@ -141,7 +141,7 @@
 
 
 
-  <title>ITU Copenhagen, When Being unseen by mBERT is just the beginning, Handling New Languages With Multilingual Language Models | </title>
+  <title>ITU Copenhagen, When Being unseen by mBERT is just the beginning, Handling New Languages With Multilingual Language Models | Home</title>
 
 </head>
 
@@ -184,7 +184,7 @@
   <div class="container">
 
     
-      <a class="navbar-brand" href="/"></a>
+      <a class="navbar-brand" href="/">Home</a>
       
       <button type="button" class="navbar-toggler" data-toggle="collapse"
               data-target="#navbar" aria-controls="navbar" aria-expanded="false" aria-label="Toggle navigation">
