--- a/404.html
+++ b/404.html
@@ -113,9 +113,9 @@
   
   <meta property="twitter:card" content="summary">
   
-  <meta property="og:site_name" content="">
+  <meta property="og:site_name" content="Home">
   <meta property="og:url" content="https://ben-mlr.github.io/404.html">
-  <meta property="og:title" content="404 Page not found | ">
+  <meta property="og:title" content="404 Page not found | Home">
   <meta property="og:description" content="PhD student in Natural Language Processing"><meta property="og:image" content="https://ben-mlr.github.io/img/icon-192.png">
   <meta property="twitter:image" content="https://ben-mlr.github.io/img/icon-192.png"><meta property="og:locale" content="en-us">
   
@@ -136,7 +136,7 @@
 
 
 
-  <title>404 Page not found | </title>
+  <title>404 Page not found | Home</title>
 
 </head>
 
@@ -179,7 +179,7 @@
   <div class="container">
 
     
-      <a class="navbar-brand" href="/"></a>
+      <a class="navbar-brand" href="/">Home</a>
       
       <button type="button" class="navbar-toggler" data-toggle="collapse"
               data-target="#navbar" aria-controls="navbar" aria-expanded="false" aria-label="Toggle navigation">
