--- a/publication/camembert/index.html
+++ b/publication/camembert/index.html
@@ -113,9 +113,9 @@
   
   <meta property="twitter:card" content="summary">
   
-  <meta property="og:site_name" content="">
+  <meta property="og:site_name" content="Home">
   <meta property="og:url" content="https://ben-mlr.github.io/publication/camembert/">
-  <meta property="og:title" content="CamemBERT: a Tasty French Language Model | ">
+  <meta property="og:title" content="CamemBERT: a Tasty French Language Model | Home">
   <meta property="og:description" content="Pretrained language models are now ubiquitous in Natural Language Processing. Despite their success, most available models have either been trained on English data or on the concatenation of data in multiple languages. This makes practical use of such models –in all languages except English– very limited. In this paper, we investigate the feasibility of training monolingual Transformer-based language models for other languages, taking French as an example and evaluating our language models on part-of-speech tagging, dependency parsing, named entity recognition and natural language inference tasks. We show that the use of web crawled data is preferable to the use of Wikipedia data. More surprisingly, we show that a relatively small web crawled dataset (4GB) leads to results that are as good as those obtained using larger datasets (130&#43;GB). Our best performing model CamemBERT reaches or improves the state of the art in all four downstream tasks."><meta property="og:image" content="https://ben-mlr.github.io/img/icon-192.png">
   <meta property="twitter:image" content="https://ben-mlr.github.io/img/icon-192.png"><meta property="og:locale" content="en-us">
   
@@ -160,7 +160,7 @@
   
   "publisher": {
     "@type": "Organization",
-    "name": "",
+    "name": "Home",
     "logo": {
       "@type": "ImageObject",
       "url": "https://ben-mlr.github.io/img/icon-512.png"
@@ -184,7 +184,7 @@
 
 
 
-  <title>CamemBERT: a Tasty French Language Model | </title>
+  <title>CamemBERT: a Tasty French Language Model | Home</title>
 
 </head>
 
@@ -227,7 +227,7 @@
   <div class="container">
 
     
-      <a class="navbar-brand" href="/"></a>
+      <a class="navbar-brand" href="/">Home</a>
       
       <button type="button" class="navbar-toggler" data-toggle="collapse"
               data-target="#navbar" aria-controls="navbar" aria-expanded="false" aria-label="Toggle navigation">
