--- a/publication/unseen-languages/index.html
+++ b/publication/unseen-languages/index.html
@@ -113,9 +113,9 @@
   
   <meta property="twitter:card" content="summary">
   
-  <meta property="og:site_name" content="">
+  <meta property="og:site_name" content="Home">
   <meta property="og:url" content="https://ben-mlr.github.io/publication/unseen-languages/">
-  <meta property="og:title" content="When Being Unseen from mBERT is just the Beginning: Handling New Languages With Multilingual Language Models | ">
+  <meta property="og:title" content="When Being Unseen from mBERT is just the Beginning: Handling New Languages With Multilingual Language Models | Home">
   <meta property="og:description" content="Transfer learning based on pretraining language models on a large amount of raw data has become a new norm to reach state-of-the-art performance in NLP. Still, it remains unclear how this approach should be applied for unseen languages that are not covered by any available large-scale multilingual language model and for which only a small amount of raw data is generally available. In this work, by comparing multilingual and monolingual models, we show that such models behave in multiple ways on unseen languages. Some languages greatly benefit from transfer learning and behave similarly to closely related high resource languages whereas others apparently do not. Focusing on the latter, we show that this failure to transfer is largely related to the impact of the script used to write such languages. We show that transliterating those languages significantly improves the potential of large-scale multilingual language models on downstream tasks. This result provides a promising direction towards making these massively multilingual models useful for a new set of unseen languages."><meta property="og:image" content="https://ben-mlr.github.io/img/icon-192.png">
   <meta property="twitter:image" content="https://ben-mlr.github.io/img/icon-192.png"><meta property="og:locale" content="en-us">
   
@@ -160,7 +160,7 @@
   
   "publisher": {
     "@type": "Organization",
-    "name": "",
+    "name": "Home",
     "logo": {
       "@type": "ImageObject",
       "url": "https://ben-mlr.github.io/img/icon-512.png"
@@ -184,7 +184,7 @@
 
 
 
-  <title>When Being Unseen from mBERT is just the Beginning: Handling New Languages With Multilingual Language Models | </title>
+  <title>When Being Unseen from mBERT is just the Beginning: Handling New Languages With Multilingual Language Models | Home</title>
 
 </head>
 
@@ -227,7 +227,7 @@
   <div class="container">
 
     
-      <a class="navbar-brand" href="/"></a>
+      <a class="navbar-brand" href="/">Home</a>
       
       <button type="button" class="navbar-toggler" data-toggle="collapse"
               data-target="#navbar" aria-controls="navbar" aria-expanded="false" aria-label="Toggle navigation">
