--- a/publication_types/0/index.html
+++ b/publication_types/0/index.html
@@ -96,7 +96,7 @@
 
 
   
-  <link rel="alternate" href="/publication_types/0/index.xml" type="application/rss+xml" title="">
+  <link rel="alternate" href="/publication_types/0/index.xml" type="application/rss+xml" title="Home">
   
 
   <link rel="manifest" href="/index.webmanifest">
@@ -115,9 +115,9 @@
   
   <meta property="twitter:card" content="summary">
   
-  <meta property="og:site_name" content="">
+  <meta property="og:site_name" content="Home">
   <meta property="og:url" content="https://ben-mlr.github.io/publication_types/0/">
-  <meta property="og:title" content="0 | ">
+  <meta property="og:title" content="0 | Home">
   <meta property="og:description" content="PhD student in Natural Language Processing"><meta property="og:image" content="https://ben-mlr.github.io/img/icon-192.png">
   <meta property="twitter:image" content="https://ben-mlr.github.io/img/icon-192.png"><meta property="og:locale" content="en-us">
   
@@ -138,7 +138,7 @@
 
 
 
-  <title>0 | </title>
+  <title>0 | Home</title>
 
 </head>
 
@@ -181,7 +181,7 @@
   <div class="container">
 
     
-      <a class="navbar-brand" href="/"></a>
+      <a class="navbar-brand" href="/">Home</a>
       
       <button type="button" class="navbar-toggler" data-toggle="collapse"
               data-target="#navbar" aria-controls="navbar" aria-expanded="false" aria-label="Toggle navigation">
