--- a/resources/index.html
+++ b/resources/index.html
@@ -114,9 +114,9 @@
   
   <meta property="twitter:card" content="summary">
   
-  <meta property="og:site_name" content="">
+  <meta property="og:site_name" content="Home">
   <meta property="og:url" content="https://ben-mlr.github.io/resources/">
-  <meta property="og:title" content="ALMANACH Study Group | ">
+  <meta property="og:title" content="ALMANACH Study Group | Home">
   <meta property="og:description" content="September 2019
  Emotion Detection with Neural Personal Discrimination presented by Gaël Guibon [slides] [paper]  "><meta property="og:image" content="https://ben-mlr.github.io/img/icon-192.png">
   <meta property="twitter:image" content="https://ben-mlr.github.io/img/icon-192.png"><meta property="og:locale" content="en-us">
@@ -141,7 +141,7 @@
 
 
 
-  <title>ALMANACH Study Group | </title>
+  <title>ALMANACH Study Group | Home</title>
 
 </head>
 
@@ -184,7 +184,7 @@
   <div class="container">
 
     
-      <a class="navbar-brand" href="/"></a>
+      <a class="navbar-brand" href="/">Home</a>
       
       <button type="button" class="navbar-toggler" data-toggle="collapse"
               data-target="#navbar" aria-controls="navbar" aria-expanded="false" aria-label="Toggle navigation">
