--- a/404.html
+++ b/404.html
@@ -305,7 +305,7 @@
         
 
         <li class="nav-item">
-          <a class="nav-link " href="/#4-supervising"><span>Supervision</span></a>
+          <a class="nav-link " href="/#4-supervising"><span>Mentoring</span></a>
         </li>
 
         
