--- a/publication_types/1/index.html
+++ b/publication_types/1/index.html
@@ -393,6 +393,13 @@
   </div>
   
   <div>
+    <h2><a href="/talks/itu-copenhagen/">ITU Copenhagen, When Being unseen by mBERT is just the beginning, Handling New Languages With Multilingual Language Models</a></h2>
+    <div class="article-style">
+      
+    </div>
+  </div>
+  
+  <div>
     <h2><a href="/publication/camembert/">CamemBERT: a Tasty French Language Model</a></h2>
     <div class="article-style">
       
