--- a/talks/bar-ilan/index.html
+++ b/talks/bar-ilan/index.html
@@ -535,7 +535,7 @@
 
 
 
-<a class="btn btn-outline-primary my-1 mr-1" href="https://docs.google.com/presentation/d/1ZAl2NootlvXodlRLxMQx_-UwXdcgGk-SmkxGbsia_OQ/edit?usp=sharing%20" target="_blank" rel="noopener">
+<a class="btn btn-outline-primary my-1 mr-1" href="/files/transfer-learning-to-an-unseen-dialect-talk-at-Bar-Ilan-University.pdf" target="_blank" rel="noopener">
   PDF
 </a>
 
