--- a/index.html
+++ b/index.html
@@ -530,7 +530,7 @@
     
     
 
-    <p>I am a third-year PhD student at <a href="https://www.sorbonne-universite.fr/en/research-and-innovation/research-strategy" target="_blank">Sorbonne Université</a> and <a href="https://www.inria.fr/en/centre-inria-de-paris" target="_blank">INRIA Paris</a> in the <a href="http://almanach.inria.fr/index-en.html" target="_blank">Almanach</a> research team. My research focuses on understanding the behavior of large scale language models and applying them efficiently in the multilingual context. I have interned at Apple AI/ML and Amazon Alexa AI. I am also in charge of the Machine Learning for NLP course at ENSAE Paris.</p>
+    <p>I am a third-year PhD student at <a href="https://www.sorbonne-universite.fr/en/research-and-innovation/research-strategy" target="_blank">Sorbonne Université</a> and <a href="https://www.inria.fr/en/centre-inria-de-paris" target="_blank">INRIA Paris</a> in the <a href="http://almanach.inria.fr/index-en.html" target="_blank">Almanach</a> research team. My research focuses on understanding the behavior of large scale language models and applying them efficiently in the multilingual context. I have interned at Apple AI/ML and Amazon Alexa AI. I am also the main instructor for the Machine Learning for NLP course at ENSAE Paris.</p>
 
 
     <div class="row">
@@ -1655,7 +1655,7 @@
   </div>
   <div class="col-12 col-lg-8">
 
-    <p>2019-2022 - Lecturer at <a href="https://www.ensae.fr/courses/analyse-textuelle/" target="_blank">ENSAE Paris</a> in charge of the <a href="https://nlp-ensae.github.io/" target="_blank">Machine Learning for Natural Language Processing</a> course.</p>
+    <p>2019-2022 - Lecturer and Main Instructor at <a href="https://www.ensae.fr/courses/analyse-textuelle/" target="_blank">ENSAE Paris</a> for the <a href="https://nlp-ensae.github.io/" target="_blank">Machine Learning for Natural Language Processing</a> course.</p>
 
 <p>2018-2019 - Teaching assistant for Master students in <strong><em>Initiation to Research in Statistics</em></strong> at <a href="https://www.parisdescartes.fr/en/homepage/" target="_blank">University Paris-Descartes</a></p>
 
@@ -1753,7 +1753,9 @@
   </div>
   <div class="col-12 col-lg-8">
 
-    <p>2018-2022 - Supervising MSc students&rsquo; research project working on Word Embedding, Language Modeling and Sentiment Analysis.</p>
+    <p>2022 - Mentor for the <a href="https://www.fatimafellowship.com/" target="_blank">Fatima Fellowship</a> program. Mentoring 3 students in analysing cultural biases in multilingual language models.</p>
+
+<p>2018-2022 - Supervising MSc students&rsquo; research projects. Focusing on implementation, evaluation and analysis of static Word Embedding techniques and Language Modeling.</p>
 
 <p>2019 - Supervising internship on Domain Adaptation for Non-Canonical Data (6 months)</p>
 
