--- a/talks/index.html
+++ b/talks/index.html
@@ -117,7 +117,7 @@
   
   <meta property="og:site_name" content="Home">
   <meta property="og:url" content="https://ben-mlr.github.io/talks/">
-  <meta property="og:title" content="JHU CSLP Seminar, Cross-Lingual Transfer with Multilingual Language Models | Home">
+  <meta property="og:title" content="Talks | Home">
   <meta property="og:description" content="PhD student in Natural Language Processing"><meta property="og:image" content="https://ben-mlr.github.io/img/icon-192.png">
   <meta property="twitter:image" content="https://ben-mlr.github.io/img/icon-192.png"><meta property="og:locale" content="en-us">
   
@@ -138,7 +138,7 @@
 
 
 
-  <title>JHU CSLP Seminar, Cross-Lingual Transfer with Multilingual Language Models | Home</title>
+  <title>Talks | Home</title>
 
 </head>
 
@@ -362,7 +362,7 @@
     
   
 <div class="universal-wrapper pt-3">
-  <h1>JHU CSLP Seminar, Cross-Lingual Transfer with Multilingual Language Models</h1>
+  <h1>Talks</h1>
 
   
 
