--- a/back/index.html
+++ b/back/index.html
@@ -28,7 +28,7 @@
   
     
   
-  <meta name="description" content="PhD student in Natural Language Processing">
+  <meta name="description" content="Researcher in Natural Language Processing">
 
   
   <link rel="alternate" hreflang="en-us" href="https://ben-mlr.github.io/back/">
@@ -118,7 +118,7 @@
   <meta property="og:site_name" content="Home">
   <meta property="og:url" content="https://ben-mlr.github.io/back/">
   <meta property="og:title" content="Backs | Home">
-  <meta property="og:description" content="PhD student in Natural Language Processing"><meta property="og:image" content="https://ben-mlr.github.io/img/icon-192.png">
+  <meta property="og:description" content="Researcher in Natural Language Processing"><meta property="og:image" content="https://ben-mlr.github.io/img/icon-192.png">
   <meta property="twitter:image" content="https://ben-mlr.github.io/img/icon-192.png"><meta property="og:locale" content="en-us">
   
     
