--- a/404.html
+++ b/404.html
@@ -28,7 +28,7 @@
   
     
   
-  <meta name="description" content="Researcher in Natural Language Processing">
+  <meta name="description" content="AI Researcher">
 
   
   <link rel="alternate" hreflang="en-us" href="https://ben-mlr.github.io/404.html">
@@ -116,7 +116,7 @@
   <meta property="og:site_name" content="Home">
   <meta property="og:url" content="https://ben-mlr.github.io/404.html">
   <meta property="og:title" content="404 Page not found | Home">
-  <meta property="og:description" content="Researcher in Natural Language Processing"><meta property="og:image" content="https://ben-mlr.github.io/img/icon-192.png">
+  <meta property="og:description" content="AI Researcher"><meta property="og:image" content="https://ben-mlr.github.io/img/icon-192.png">
   <meta property="twitter:image" content="https://ben-mlr.github.io/img/icon-192.png"><meta property="og:locale" content="en-us">
   
     
